--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -30,3 +30,15 @@
 .animate-shine {
   animation: shine 5s linear infinite
 }
+
+body{
+  scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {
+display: none;
+
+}
+html {
+scroll-behavior: smooth;
+} 
